implement residuals method

--- a/notebooks/legacy/01.explore_how_to_generate_frequencies.ipynb
+++ b/notebooks/legacy/01.explore_how_to_generate_frequencies.ipynb
@@ -7,6 +7,10 @@
     "## How to generate pulsar frequencies\n",
     "\n",
     "\n",
+    "**Note: the methods in this notebook have been usurped by XXX**\n",
+    "\n",
+    "\n",
+    "\n",
     "This notebook explores how to take some pulsar data (`.tim` and `.par` files) from the [IPTA Mock Data Challenge](https://web.archive.org/web/20130108011819/http://www.ipta4gw.org/?page_id=126) (see also [https://github.com/nanograv/mdc1](https://github.com/nanograv/mdc1)) and generate some frequencies $f$ for use with state-space methods like Kalman filtering.\n",
     "\n",
     "It is a pedagogical guide, heavily based off of [guidance from L. Dunn](https://gist.github.com/ldunn/0ee22b40397965f4644ea8d1bc2f1a77)\n",
